@@ -914,4 +914,35 @@ function postgresql_process_sql_delete($table, $where, $where_join = 'AND') {
 
 	return process_sql ($query);
 }
+
+/**
+ * Get row by row the DB by SQL query. The first time pass the SQL query and
+ * rest of times pass none for iterate in table and extract row by row, and
+ * the end return false.
+ *
+ * @param bool $new Default true, if true start to query.
+ * @param resource $result The resource of mysql for access to query.
+ * @param string $sql
+ * @return mixed The row or false in error.
+ */
+function postgresql_get_db_all_row_by_steps_sql($new = true, &$result, $sql = null) {
+	if ($new == true)
+		$result = pg_query($sql);
+
+	return pg_fetch_assoc($result);
+}
+
+/**
+ * Starts a database transaction.
+ */
+function postgresql_process_sql_begin() {
+	pg_query('BEGIN TRANSACTION');
+}
+
+/**
+ * Commits a database transaction.
+ */
+function postgresql_process_sql_commit() {
+	pg_query('COMMIT');
+}
 ?>
