@@ -1,3 +1,10 @@
+2011-03-01 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/db/postgresql.php, include/db/mysql.php, include/functions_db.php:
+	separate the function "get_db_all_row_by_steps_sql", "process_sql_begin",
+	"process_sql_commit" and "process_sql_rollback" into the two version for
+	MySQL and PostgreSQL engine.
+
 2011-03-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/ajax/skins.ajax.php: Replaced "give_acl" function call to 
